@@ -2,7 +2,7 @@ dnl -----------------------------------------------------------------------
 dnl configure.in for xmp
 dnl
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.42 2007-11-11 16:06:52 cmatsuoka Exp $
+dnl $Id: configure.in,v 1.43 2007-12-02 01:19:45 cmatsuoka Exp $
 dnl -----------------------------------------------------------------------
 
 AC_INIT
@@ -544,7 +544,7 @@ beos*)
 dnl
 dnl	Test for AmigaOS
 dnl
-amigaos*)
+amigaos*|aros)
     DRIVERS="${DRIVERS} amiga.o"
     AC_DEFINE(DRIVER_AMIGA)
     ;;
